  * better track numbers extraction command in cdda2ogg/cdda2mp3
  * reenabled (forgotten) support for libedc
  * table formating fixes in cdda2wav.1, helps small terminals
  * AIX 5l port
  * killing FIFO process on ungraceful termination
  * scsi-linux-sg.c: skipping unallowed devices, cleanup/consolidation of the
    old workaround(s) for ATA now for SCSI too

  [ Eugen Dedu ]
  * corrections and constructive help on cdda2ogg

  [ Modestas Vainius ]
  * dropped . from the include path and fixed mkisofs source to use the local
    headers

  [ Lorenz Minder ]
  * Fix of the joliet_strlen signature
  * Code refactoring around *cvt* declarations to make the conditional
    compilation more reliable, especially on BSD and AIX
  * include/utypes.h: guard to preserve SIZE_T_MAX

  [ Christian Fromme ]
  * detailed review and correction of author related data in manpages and
    README files

  [ Peter Samuelson, Tollef Fog Heen ]
  * typo and grammar fixes in mkisofs.8

 -- Eduard Bloch <blade@debian.org>  Wed,  6 Sep 2006 22:05:30 +0200

cdrkit (1.0pre4) RELEASED; urgency=low

  [ Eduard Bloch ]
  * Added checks for libcam to make (k)FreeBSD compilation work (untested)
  * added clarifications about changes to all source files
  * adapted initial message to display the copyright more clearly
  * adapted copyright and contact information in scgcheck manpage
  * adapted contact information in btcflash manpage, also added a reference to
    its original author which has been missing

  [ Peter Samuelson ]
  * Cleanups: unused macros/defines
  * Unified and simplified the build-host data crawling methods
  
  [ Juergen Weigert ]
  * Various documentation corrections, replaced cdrecord->wodim where it is
    appropriate and legal on many visible locations

 -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 23:36:58 +0200

cdrkit (1.0pre3) unstable; urgency=low

  [ Eduard Bloch ]
  * Added FAQ ("where wodim name comes from")