@@ -15,6 +15,8 @@ cdrkit (1.0pre5) UNRELEASED; urgency=low
   * killing FIFO process on ungraceful termination
   * scsi-linux-sg.c: skipping unallowed devices, cleanup/consolidation of the
     old workaround(s) for ATA now for SCSI too
+  * renamed error function to schily_error because it started to wreak random
+    havoc after harmless header moving (conflict with incompatible GNU version)
 
   [ Eugen Dedu ]
   * corrections and constructive help on cdda2ogg
